2007-03-29 11:52 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio,gridCollapseEdge) to
	consistantly evaluate uv and xyz for both faces.

2007-03-22 13:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridcreate_) to account for fun3d-23948 c2n
	index flip.

2007-02-20  16:52 Mike Park  <mike.park@nasa.gov>
	
	* src/FAUXGeom.c (CADGeom_PointOnFace) to prevent unitialized
	memory read and seg fault, get rid of unused variable i.

2007-02-20  16:15 Mike Park  <mike.park@nasa.gov>
	
	* src/FAUXGeom.c (initialize_faux) improved error handling.
	* src/FAUXGeom.c (faux_faceId) corrected error that prevented
	finding face.

2007-02-20  16:15 Mike Park  <mike.park@nasa.gov>
	
	* src/FAUXGeom.c (initialize_faux) improved error handling.

2007-02-20 15:08 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.14 Release. Tag before FAKEGeom reimplementation.

2007-02-12 10:05 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelswap_) skip gridRemoveTwoFaceCell for
	cut cell and frozen boundary layer cases, to see if it causes parallel
	global cell mis-counts.

2006-12-08  5:00 Mike Park & Karen Bibb  <mike.park@nasa.gov> <karen.l.bibb@nasa.gov>
	
	* src/FAUXGeom.c, created a first cut at a generalized FAKEGeom, such
	  that the user only has to provide an input file with basic info
	  about the surfaces to be refined with fake geometry.

2006-12-08  13:30 Mike Park  <mike.park@nasa.gov>

	* added conditional to headers for Mac OSX.4, need float.h, not value.h

2006-11-08  8:08 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridExportFASTSurface) export surface grid to FAST.

2006-09-28  8:16 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotVolumeGeom) tecplot entire volume.

2006-09-07 16:15 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridExportGRI) to provide path to PX grid format

2006-09-06 11:53 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridTranslate) to uniformly shift all nodes
